refactoring: fixes from first Sonarqube report, ex: unused imports, code duplication & testings